--- a/ir8062/Makefile
+++ b/ir8062/Makefile
@@ -1,25 +1,16 @@
 .SUFFIXES : .x .o .c .s
 
-#CC := gcc #arm-linux-gcc
-#TARGET = main
-
 CC := arm-linux-gcc
 #STRIP := arm-linux-strip
-TARGET = ini-parse
+TARGET = ir8062
 
-SRCS := ini-parser.c
+#SRCS := ini-parser.c main.c
+#OBJS= main.o cJSON.o curl_fun.o sensor.o cJSON.o
+OBJS= main.o cJSON.o curl_fun.o sensor.o ini-parse.o
+LIBS = -lcurl -lm #-lssl -lcrypto #-ljson-c -lnsl 
 
-all: 
-	$(CC) -static $(SRCS) -o $(TARGET)
-#	$(STRIP) $(TARGET) 
-
+$(TARGET) : $(OBJS)
+	$(CC) -o $(TARGET) $(OBJS) $(LDFLAGS) $(CFLAGS) $(LIBS) 
 clean:
-	rm -f *.o 
-	rm -f *.x 
-	rm -f *.flat
-	rm -f *.map
-	rm -f temp
-	rm -f *.img
-	rm -f $(TARGET)	
-	rm -f *.gdb
-	rm -f *.bak
+	rm -r *.o
+
