Modify defconfig patch files

--- a/patch/jffs2/nuc980_shuttle_defconfig
+++ b/patch/jffs2/nuc980_shuttle_defconfig
@@ -1138,7 +1138,7 @@ CONFIG_HW_RANDOM_NUVOTON=y
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
-# CONFIG_I2C_CHARDEV is not set
+CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
 
 #
@@ -1216,7 +1216,13 @@ CONFIG_SPI_NUC980_QSPI0_NORMAL=y
 CONFIG_SPI_NUC980_QSPI0_PDMA=y
 # CONFIG_SPI_NUC980_QSPI0_NO_PDMA is not set
 # CONFIG_SPI_NUC980_QSPI0_SS1 is not set
-# CONFIG_SPI_NUC980_SPI0 is not set
+CONFIG_SPI_NUC980_SPI0=y
+# CONFIG_SPI_NUC980_SPI0_PD is not set
+CONFIG_SPI_NUC980_SPI0_PC=y
+CONFIG_SPI_NUC980_SPI0_PDMA=y
+# CONFIG_SPI_NUC980_SPI0_NO_PDMA is not set
+CONFIG_SPI_NUC980_SPI0_SS1=y
+CONFIG_SPI_NUC980_SPI0_SS1_PC0=y
 # CONFIG_SPI_NUC980_SPI1 is not set
 # CONFIG_SPI_OC_TINY is not set
 # CONFIG_SPI_PXA2XX_PCI is not set
