--- a/patch/jffs2/nuvoton_nuc980_shuttle_defconfig
+++ b/patch/jffs2/nuvoton_nuc980_shuttle_defconfig
@@ -379,7 +379,7 @@ BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
-BR2_LINUX_KERNEL_DEFCONFIG="nuc980_chili"
+BR2_LINUX_KERNEL_DEFCONFIG="nuc980_shuttle"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES=""
 BR2_LINUX_KERNEL_UBOOT_IMAGE=y
 BR2_LINUX_KERNEL_UIMAGE=y
