--- a/ir8062/Makefile
+++ b/ir8062/Makefile
@@ -6,8 +6,8 @@ TARGET = ir8062
 
 #SRCS := ini-parser.c main.c
 #OBJS= main.o cJSON.o curl_fun.o sensor.o cJSON.o
-OBJS= main.o cJSON.o sensor.o ini-parse.o cloud-service.o http-igreent.o rs485.o led_control.o
-LIBS = -lcurl -lm #-lssl -lcrypto #-ljson-c -lnsl 
+OBJS= main.o cJSON.o sensor.o ini-parse.o cloud-service.o http-igreent.o rs485.o led_control.o jpegenc.o
+LIBS = -lcurl -lm -ljpeg #-lssl -lcrypto #-ljson-c -lnsl 
 
 $(TARGET) : $(OBJS)
 	$(CC) -o $(TARGET) $(OBJS) $(LDFLAGS) $(CFLAGS) $(LIBS) 
